bitfields/tests/compile_error_cases/errors/bitfield_invalid_arg.rs
use bitfields::bitfield;

#[bitfield(u32, +==32 = hello)]
pub struct Bitfield {
    #[bits(default = 0x12)]
    a: u32,
}

fn main() {}
